<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:layout_marginStart="10sp"
        android:layout_marginEnd="10sp"
        android:layout_marginBottom="10sp"
        tools:ignore="ScrolViewSize"
        android:background="@drawable/background">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:ignore="UselessParent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/important_information"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textColor="#f956"
                android:textSize="35sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/foodaddivies"
                android:layout_marginTop="30sp"
                android:textStyle="bold"
                android:textColor="#FFA62F"
                android:textSize="25sp"
                tools:ignore="HardcodedText"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/foodaddivies2"
                android:layout_marginTop="2sp"
                android:textColor="#43C6DB"
                android:textSize="20sp"
                tools:ignore="HardcodedText"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/whatenumbers"
                android:layout_marginTop="30sp"
                android:textStyle="bold"
                android:textColor="#FFA62F"
                android:textSize="25sp"
                tools:ignore="HardcodedText"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/enumbermeanings"
                android:layout_marginTop="2sp"
                android:textColor="#43C6DB"
                android:textSize="20sp"
                tools:ignore="HardcodedText"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/halal"
                android:layout_marginTop="30sp"
                android:textStyle="bold"
                android:textColor="#FFA62F"
                android:textSize="25sp"
                tools:ignore="HardcodedText"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/halalmeaning"
                android:layout_marginTop="2sp"
                android:textColor="#43C6DB"
                android:textSize="20sp"
                tools:ignore="HardcodedText"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/mushbooh"
                android:layout_marginTop="30sp"
                android:textStyle="bold"
                android:textColor="#FFA62F"
                android:textSize="25sp"
                tools:ignore="HardcodedText"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Mushboohmeaning"
                android:layout_marginTop="2sp"
                android:textColor="#43C6DB"
                android:textSize="20sp"
                tools:ignore="HardcodedText"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/haram"
                android:layout_marginTop="30sp"
                android:textStyle="bold"
                android:textColor="#FFA62F"
                android:textSize="25sp"
                tools:ignore="HardcodedText"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/harammeaning"
                android:layout_marginTop="2sp"
                android:layout_marginBottom="10sp"
                android:textColor="#43C6DB"
                android:textSize="20sp"
                tools:ignore="HardcodedText"
                />

        </LinearLayout>

        </RelativeLayout>

</ScrollView>