<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/background"
    tools:context=".camera">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/camera_fragment"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textColor="#f956"
            android:textSize="35sp" />

        <Button
            android:id="@+id/openCamera"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30sp"
            android:text="@string/open_cameraa" />

        <ImageView
            android:id="@+id/capturedImage"
            android:layout_width="250dp"
            android:layout_height="320dp"
            android:layout_gravity="center"
            android:layout_marginTop="30sp"
            android:contentDescription="@string/todo" />

    </LinearLayout>

</RelativeLayout>




